# shiba2sashimi

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.py  shiba2sashimi.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: publish.yaml  release.yaml  update-version.yaml
docker/: Dockerfile
docs/: index.md  installation.md  usage.md
src/: bams.py  plots.py  tables.py  utils.py
src/shiba2sashimi/: bams.py  main.py  plots.py  utils.py
